[tool.poetry]
name = "dreadnought"
version = "0.1.0"
description = ""
authors = ["gatheluck <gatheluck+tech@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.7.1"
torchvision = "^0.8.2"
hydra-core = "^1.0.6"
cleverhans = {git = "https://github.com/cleverhans-lab/cleverhans.git", rev = "master"}

[tool.poetry.dev-dependencies]
mypy = "^0.812"
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
pytest = "^6.2.2"
pytest-mock = "^3.5.1"
pytest-cov = "^2.11.1"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
